--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -176,6 +176,15 @@ background-size: 100%;}
 .notice li li dt em {color: #999;}
 .notice li li dd {color: #777; padding-top: 3px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 
+/* 헬프 - 할인카드 */
+.card {padding: 17px;}
+.card ul {}
+.card li {border: 1px solid #d7d7d7; padding: 17px; margin-bottom: 15px; position: relative; box-sizing: border-box; min-height: 102px;}
+.card li span {position: absolute; left: 17px; top: 17px;}
+.card li span img {width: 105px;}
+.card li strong {display: block; font-size: 18px; padding-left: 120px; color: #777;}
+.card li em {display: block; font-size: 14px; padding-left: 120px; color: #777; font-weight: 300;}
+
 
 
 /* 미디어 쿼리 */
