--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -179,12 +179,11 @@ background-size: 100%;}
 
 /* 헬프 - 할인카드 */
 .card {padding: 17px;}
-.card ul {}
 .card li {border: 1px solid #d7d7d7; padding: 17px; margin-bottom: 15px; position: relative; box-sizing: border-box; min-height: 102px;}
 .card li span {position: absolute; left: 17px; top: 17px;}
 .card li span img {width: 105px;}
-.card li strong {display: block; font-size: 18px; padding-left: 120px; color: #777;}
-.card li em {display: block; font-size: 14px; padding-left: 120px; color: #777; font-weight: 300;}
+.card li strong {display: block; font-size: 18px; padding-left: 120px; color: #777; overflow: hidden; text-overflow: ellipsis; white-space: nowrap}
+.card li em {display: block; font-size: 14px; padding-left: 120px; color: #777; font-weight: 300; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;}
 
 /* 헬프 - 고객센터/SVG */
 .service ul {overflow: hidden;}
@@ -214,6 +213,15 @@ background-size: 100%;}
     .header h1 strong {left: 24px;}
     .banner-menu .bm_left ul {display: none;}
     .banner-menu .bm_right ul:first-child {display: none;}
+    
+    .help {padding-bottom: 100px;}
+    .help article.help_box1 {width: 49%; margin-right: 2%;}
+    .help article.help_box2 {width: 49%; margin: 0;}
+    .help article.help_box3 {width: 100%; margin-top: 2%;}
+    .help article.help_box3 > div {height: auto;}
+    .service li {width: 25%;}
+    .service li:nth-child(1) {border-bottom: 1px solid #d7d7d7;}
+    .service li:nth-child(2) {border-right: 0; border-bottom: 1px solid #d7d7d7;}
 }
 @media (max-width: 960px) {
     .banner-slider {height: 500px;}
@@ -261,6 +269,19 @@ background-size: 100%;}
     #new .row {background: #fff; margin: 24px; padding: 24px;}
     .new {padding: 0;}
     .new h2 {font-size: 24px; font-weight: bold; padding-bottom: 20px; padding: 0;}
+    
+    #help .row {padding: 0 24px; margin: -24px 0px;}
+    .help {padding-bottom: 24px;}
+    .help article {padding: 24px; box-sizing: border-box;}
+    .help article h3 {font-size: 24px; font-weight: bold; padding-bottom: 20px; padding: 0;}
+    .help article.help_box1 {width: 100%; background: #fff; margin-right: 0; margin-top: 24px;}
+    .help article.help_box2 {width: 100%; background: #fff; margin-top: 24px;}
+    .help article.help_box3 {width: 100%; background: #fff; margin-top: 24px;}
+    .help article.help_box3 h3 {display: none;}
+    .service li {border: 0;}
+    .service li:nth-child(1) {border: 0;}
+    .service li:nth-child(2) {border: 0;}
+    
 }
 @media (max-width: 600px) {
     .banner-slider {height: 400px;}
@@ -301,10 +322,35 @@ background-size: 100%;}
     .new .new_right .star {padding: 9px 0;}
     .new .new_right .select .s1 {width: 100%; margin-right: 0; margin-bottom: 2%;}
     .new .new_right .select .s2 {width: 100%;}
+    
+    #help .row {padding: 0 8px; margin: -16px 0px;}
+    .help {padding-bottom: 16px;}
+    .help article {padding: 16px; box-sizing: border-box;}
+    .help article h3 {font-size: 18px;}
+    .help article.help_box2 > div {height: auto;}
+    .help article.help_box3 {padding: 0;}
+    .card {padding: 8px;}
+    .card li:last-child {margin: 0;}
+    .service li {width: 50%;}
+    .service li:nth-child(1) {border-right: 1px solid #d7d7d7; border-bottom: 1px solid #d7d7d7;}
+    .service li:nth-child(2) {border-bottom: 1px solid #d7d7d7;}
+    .service li:nth-child(3) {border-right: 1px solid #d7d7d7;}
 }
 @media (max-width: 480px) {
     
 }
 @media (max-width: 360px) {
     .movie_title li a {margin-right: 7px;}
+    .help article > div {height: 287px;}
+    .notice {padding: 8px;}
+    .notice li a {padding: 5px 10px;}
+    .notice li ul {left: 9px; top: 56px;}
+    .notice li li {padding: 8px;}
+    .card li {padding: 8px; margin-bottom: 8px; min-height: 90px;}
+    .card li span img {width: 60px; left: 11px; top: 10px;}
+    .card li strong {padding-left: 75px; font-size: 14px;}
+    .card li em {padding-left: 75px; font-size: 14px;}
+    .service li {height: 138px;}
+    .service li a span {width: 70px; height: 70px;}
+    .service li a strong {font-size: 14px;}
 }
