--- a/WebStandard/css/style.css
+++ b/WebStandard/css/style.css
@@ -14,7 +14,7 @@
 /* 컨텐츠 레이아웃 */
 #cont_nav {background-color: #f6fdff; display: none;}
 #cont_tit {background-color: #EAF7FD;}
-#cont_ban {background-color: #DCEFF7;}
+#cont_ban {background-color: #d7efec;}
 #cont_cont {background-color: #f6fdff;}
 
 /* 컨테이너 */
@@ -26,8 +26,8 @@
 .header .header-menu a {padding: 10px 0px 10px 13px; color: #fff; display: inline-block;}
 .header .header-menu a:hover {color: #666;}
 .header .header-tit {text-align: center;}
-.header .header-tit h1 {background-color: #4aa8d4; font-size: 28px; padding: 5px 20px 6px 20px; display: inline-block; color: #fff; margin-top: 40px; font-weight: normal; text-transform: uppercase;}
-.header .header-tit a {display: inline-block; background-color: #2698cb; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
+.header .header-tit h1 {background-color: #0da391; font-size: 50px; font-family: 'Dosis', sans-serif; padding: 5px 20px 6px 20px; display: inline-block; color: #fff; margin-top: 40px; text-transform: uppercase;}
+.header .header-tit a {display: inline-block; background-color: #2fbead; font-family: 'Dosis', sans-serif; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
 /* 헤더 아이콘 */
 .header .header-icon {text-align: center; margin-top: 30px;}
 .header .header-icon a {display: inline-block; width: 60px; height: 60px; background: url(../img/icon.png); margin: 0 3px;}
@@ -53,7 +53,7 @@
 
 /* 타이틀 */
 .tit {position: relative;}
-.tit h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #2c94c4; font-family: 'Gugi', cursive;}
+.tit h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #0da391; font-family: 'Gugi', cursive;}
 .tit .btn {position: absolute; top: 5px; right: 0; width: 60px; height: 60px; background: url(../img/icon.png) no-repeat 0 -600px;}
 .tit .btn.on {background-position: 0 -660px;}
 
@@ -84,8 +84,8 @@
 .ban .slick-slide {margin: 10px;}
 .ban .slick-dots {position: absolute; bottom: 15px; display: block; width: 100%; text-align: center;}
 .ban .slick-dots li {display: inline-block; width: 15px; height: 15px; margin: 5px;}
-.ban .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 15px; height: 15px; cursor: pointer; background: #5dbfeb; border-radius: 50%;}
-.ban .slick-dots li.slick-active button {background: #2b91c8;}
+.ban .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 15px; height: 15px; cursor: pointer; background: #2ac1ac; border-radius: 50%;}
+.ban .slick-dots li.slick-active button {background: #0da391;}
 
 /* 컨텐츠 */
 .cont {overflow: hidden; padding-top: 30px;}
@@ -98,7 +98,7 @@
 .cont .col6 {margin-right: 0; padding-right: 0;}
 
 .cont .column .ico_img {display: block; width: 60px; height: 60px; background: url(../img/icon.png) no-repeat; position: absolute; left: 0; top: 0;}
-.cont .column .ico_tit {padding-left: 70px; font-size: 16px; color: #2c94c4;}
+.cont .column .ico_tit {padding-left: 70px; font-size: 16px; color: #2ac1ac;}
 .cont .column .ico_desc {padding-left: 70px; padding-bottom: 15px; border-bottom: 1px solid #d0d0d0; margin-bottom: 15px;}
 
 .cont .col1 .ico_img {background-position: 0px -240px;}
@@ -116,14 +116,14 @@
 
 /* 게시판 */
 .notice {position: relative;}
-.notice h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice h4 {font-size: 14px; color: #0da391; padding-bottom: 3px; font-weight: bold;}
 .notice li {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px;}
 .notice li a {font-size: 12px;}
 .notice a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
 
 /* 게시판2 */
 .notice2 {position: relative; margin-top: 15px;}
-.notice2 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice2 h4 {font-size: 14px; color: #0da391; padding-bottom: 3px; font-weight: bold;}
 .notice2 li {overflow: hidden;}
 .notice2 li a {float: left; width: 65%; font-size: 12px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice2 li span {float: right; width: 30%; text-align: right;}
@@ -131,15 +131,15 @@
 
 /* 게시판3 */
 .notice3 {position: relative;}
-.notice3 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice3 h4 {font-size: 14px; color: #0da391; padding-bottom: 3px; font-weight: bold;}
 .notice3 li {position: relative; padding: 8px 0 14px 60px;}
-.notice3 li a img {width: 50px; position: absolute; left: 0; top: 0; border: 1px solid #0093bd;}
+.notice3 li a img {width: 50px; position: absolute; left: 0; top: 0; border: 1px solid #0da391;}
 .notice3 li a strong {display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice3 li a span {display: block; font-size: 12px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice3 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
 
 /* 마우스 오버효과1 */
-.notice_hover h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice_hover h4 {font-size: 14px; color: #0da391; padding-bottom: 3px; font-weight: bold;}
 .notice_hover ul {overflow: hidden;}
 .notice_hover ul li {float: left; width: 93px; margin-right: 5px; text-align: center;}
 .notice_hover ul li:last-child {margin-right: 0px;} /* ie9부터 사용 가능 */
@@ -169,12 +169,12 @@
 .tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
 .tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
 .tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
-.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active {background: #2ac1ac;}
 .tab_menu ul li.active ul li a {color: #333;}
 
 /* 게시판4 */
 .notice4 {position: relative; border: 1px solid #ccc;}
-.notice4 h4 {padding: 8px 10px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0093bd;}
+.notice4 h4 {padding: 8px 10px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0da391;}
 .notice4 h4 em {color: #cf3292;}
 .notice4 ul {padding: 10px;}
 .notice4 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px;}
@@ -184,7 +184,7 @@
 
 /* 갤러리
 .gallery {position: relative; border: 1px solid #ccc; height: 254px; overflow: hidden;}
-.gallery h4 {padding: 10px 0 8px 11px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0093bd;}
+.gallery h4 {padding: 10px 0 8px 11px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0da391;}
 .gallery .gallery_btn {position: absolute; top: 7px; right: 5px;}
 .gallery .gallery_btn ul {overflow: hidden;}
 .gallery .gallery_btn li {float: left; margin: 1px 2px;}
@@ -202,7 +202,7 @@
 
 /* 슬릭 갤러리 */
 .gallery {position: relative; border: 1px solid #ccc; height: 254px; overflow: hidden;}
-.gallery h4 {padding: 10px 0 8px 11px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0093bd;}
+.gallery h4 {padding: 10px 0 8px 11px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; color: #0da391;}
 .gallery .gallery_btn {position: absolute; top: 7px; right: 5px;}
 .gallery .gallery_btn button {float: left; margin: 1px 2px; display: block; width: 23px; height: 23px; background: url(../img/icon.png) no-repeat;}
 .gallery .gallery_btn .gb_icon1 {background-position: -150px -120px;}
@@ -221,7 +221,7 @@
 .login_header .lh_check {float: left; padding-right: 15px;}
 .login_header .lh_check .input_check {vertical-align: -2px;}
 .login_header .lh_ip {float: left;}
-.login_header .lh_ip em {color: #0093bd; text-decoration: underline;}
+.login_header .lh_ip em {color: #0da391; text-decoration: underline;}
 .login_content {position: relative;}
 .login_content .lc_btn {position: absolute; right: 0; top: 0; width: 62px; height: 47px; background: #fff; border: 1px solid #bebebe;}
 .login_content .input_text {width: 182px; height: 16px; padding: 2px 5px; border: 1px solid #bebebe; margin-bottom: 3px; background: #fff;}
@@ -230,7 +230,7 @@
 .login_footer li a {font-size: 12px}
 
 /* 팝업 */
-.popup h4 {font-size: 14px; color: #0093bd; padding-bottom: 4px; font-weight: 700;}
+.popup h4 {font-size: 14px; color: #0da391; padding-bottom: 4px; font-weight: 700;}
 .popup ul {overflow: hidden;}
 .popup li {float: left; width: 93px; margin-right: 5px;}
 .popup li.last {margin-right: 0;}
@@ -247,5 +247,5 @@
 /* 레이어 팝업 */
 #layer {display: none; position: fixed; left: 50px; top: 50px; width: 700px; border: 10px solid #dceff7; box-shadow: 3px 3px 10px rgba(0,0,0,0.4);}
 #layer img {width: 100%; display: block;}
-#layer .close {position: absolute; right: 20px; top: 20px; background: #0093bd; padding: 1px 6px; color: #fff;}
+#layer .close {position: absolute; right: 20px; top: 20px; background: #0da391; padding: 1px 6px; color: #fff;}
 #layer .close:hover {text-decoration: underline;}
